--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,8 @@ code {
     monospace;
 }
 
-.main-search-form .from-input {
-  width: calc(100% / 1370 * 260);
-}
-
-.main-search-form .to-input {
-  width: calc(100% / 1370 * 260);
+.main-search-form .position {
+  width: calc(100% / 1370 * 520);
 }
 
 .main-search-form .date {
@@ -40,3 +36,9 @@ code {
   width: calc(100% / 1370 * 205);
 }
 
+.main-search-from input {
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 22px;
+  color: #494949;
+}
