--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,34 @@ code {
   font-weight: bold;
 }
 
+.react-calendar__tile:disabled {
+  background-color: white !important;
+  color: #A9A9A9 !important;
+}
+
+.react-calendar__tile--now {
+  background-color: white !important;
+}
+
 .react-calendar__tile--active {
+  background-color: rgba(243, 227, 81, 0.2) !important;
+  color: black !important;
+}
+
+.react-calendar__tile--rangeStart {
   background-color: #F3E351 !important;
   color: black !important;
   border-radius: 50% !important;
 }
 
-.react-calendar__tile--now {
+.react-calendar__tile--rangeEnd {
+  background-color: #F3E351 !important;
+  color: black !important;
+  border-radius: 50% !important;
+}
+
+/* .react-calendar__tile--now {
   background-color: rgb(82, 82, 235) !important;
   color: white !important;
   border-radius: 50% !important;
-}
+} */
